--- a/ui/src/styles.scss
+++ b/ui/src/styles.scss
@@ -543,3 +543,40 @@ foreignObject {
 [ng-reflect-router-link] {
     cursor: pointer;
 }
+
+.navbar-suggestion {
+    display: flex;
+    flex-direction: row;
+    width: 100%;
+    overflow: hidden;
+    color: inherit;
+
+    &:hover {
+        color: #177ddc;
+    }
+
+    .title {
+        flex: 1;
+        display: flex;
+        overflow: hidden;
+
+        .label {
+            white-space: nowrap;
+            text-overflow: ellipsis;
+            overflow: hidden;
+        }
+
+        .id {
+            flex: 1;
+            white-space: nowrap;
+            text-overflow: ellipsis;
+            margin-left: 5px;
+            overflow: hidden;
+            color: rgba(0, 0, 0, .45);
+
+            .night & {
+                color: rgba(255, 255, 255, 0.45);
+            }
+        }
+    }
+}
