--- a/ui/src/app/views/projectv2/run/run.scss
+++ b/ui/src/app/views/projectv2/run/run.scss
@@ -136,6 +136,7 @@
             a {
                 color: inherit;
                 text-decoration: underline dotted;
+                white-space: nowrap;
 
                 &:hover {
                     color: #177ddc;
