feat(api): add cancel-in-progress on job concurrency

--- a/ui/src/app/views/projectv2/run-list/run-list.scss
+++ b/ui/src/app/views/projectv2/run-list/run-list.scss
@@ -122,6 +122,10 @@
           color: $cds_color_red;
         }
 
+        &.cancel {
+          color: $polar_grey_2;
+        }
+
         &.building {
           color: $cds_color_teal;
         }
