--- a/ui/src/app/views/projectv2/run-list/run-list.html
+++ b/ui/src/app/views/projectv2/run-list/run-list.html
@@ -58,6 +58,7 @@
 					<div class="run-avatar">
 						<span *ngIf="run.status === 'Success'" class="success" nz-icon nzType="check-circle"
 							nzTheme="outline"></span>
+						<span *ngIf="run.status === 'Cancelled'" class="cancel" nz-icon nzType="close-circle" nzTheme="outline"></span>
 						<span *ngIf="run.status === 'Fail'" class="fail" nz-icon nzType="close-circle" nzTheme="outline"></span>
 						<span *ngIf="run.status === 'Stopped'" class="fail" nz-icon nzType="pause-circle" nzTheme="outline"></span>
 						<span *ngIf="run.status === 'Building'" class="building" nz-icon nzType="play-circle"
