--- a/ui/src/app/views/navbar/navbar.scss
+++ b/ui/src/app/views/navbar/navbar.scss
@@ -65,7 +65,6 @@
 
     nz-select {
         min-width: 100px;
-        margin-right: 20px;
 
         &.not-dark {
             ::ng-deep {
@@ -96,12 +95,18 @@
         }
     }
 
+    app-favorite-button {
+        width: 50px;
+        height: 50px;
+    }
+
     [nz-popover] {
         width: 60px;
         height: 64px;
         display: flex;
         justify-content: center;
         cursor: pointer;
+        color: white;
 
         &:hover {
             background-color: rgba(255, 255, 255, 0.03);
