--- a/ui/src/app/views/search/search.html
+++ b/ui/src/app/views/search/search.html
@@ -28,6 +28,7 @@
 					</div>
 				</ng-template>
 				<ng-template #runDescription>
+					<div *ngIf="item.result.description">{{item.result.description}}</div>
 					<div class="variants" *ngIf="item.result.variants">
 						<ng-container *ngFor="let v of item.result.variants; let i = index">
 							<a *ngIf="i < 3 || item.unfold" [routerLink]="item.generateVariantRunLink(v).path"
@@ -69,7 +70,7 @@
 
 	<div *ngIf="totalCount > 0" class="footer">
 		{{totalCount}} results
-		<nz-pagination [nzPageIndex]="pageIndex" [nzPageSize]="20" [nzTotal]="totalCount"
+		<nz-pagination [nzPageIndex]="pageIndex" [nzPageSize]="30" [nzTotal]="totalCount"
 			(nzPageIndexChange)="pageIndexChange($event)"></nz-pagination>
 	</div>
 </div>
