feat: add stopped and blocked workflow

--- a/ui/src/app/views/projectv2/run-list/run-list.scss
+++ b/ui/src/app/views/projectv2/run-list/run-list.scss
@@ -129,6 +129,17 @@
         &.building {
           color: $cds_color_teal;
         }
+
+        &.blocked {
+          color: $cds_color_teal;
+        }
+        
+        &.stopped {
+          font-size: 21px;
+          border: 2px solid $cds_color_red; 
+          border-radius: 12px;
+          color: $cds_color_red;
+        }
       }
     }
 
