--- a/ui/src/app/views/home/home.html
+++ b/ui/src/app/views/home/home.html
@@ -20,8 +20,8 @@
 			<nz-list-item *ngFor="let b of bookmarks">
 				<a [routerLink]="generateBookmarkLink(b)" [queryParams]="generateBookmarkQueryParams(b)" class="bookmark">
 					<div class="title">
-						<span class="label">{{b.label}}</span>
-						<span class="id">{{b.id}}</span>
+						<span class="label" title="{{b.label}}">{{b.label}}</span>
+						<span class="id" title="{{b.id}}">{{b.id}}</span>
 					</div>
 					<div [ngSwitch]="b.type">
 						<nz-tag *ngSwitchCase="'project'" nzColor="blue">{{b.type}}</nz-tag>
