--- a/ui/src/app/views/projectv2/run-list/run-list.html
+++ b/ui/src/app/views/projectv2/run-list/run-list.html
@@ -61,8 +61,14 @@
 						<span *ngIf="run.status === 'Cancelled'" class="cancel" nz-icon nzType="close-circle"
 							nzTheme="outline"></span>
 						<span *ngIf="run.status === 'Fail'" class="fail" nz-icon nzType="close-circle" nzTheme="outline"></span>
-						<span *ngIf="run.status === 'Stopped'" class="fail" nz-icon nzType="pause-circle" nzTheme="outline"></span>
+						<span *ngIf="run.status === 'Stopped'" class="stopped" nz-icon>
+								<svg>
+									<path d="M 760 260 h -500 v 500 h 500 z"></path>
+								</svg>
+						</span>
 						<span *ngIf="run.status === 'Building'" class="building" nz-icon nzType="play-circle"
+							nzTheme="outline"></span>
+						<span *ngIf="run.status === 'Blocked'" class="blocked" nz-icon nzType="pause-circle"
 							nzTheme="outline"></span>
 					</div>
 				</ng-template>
