--- a/ui/src/app/views/project/settings/concurrency/concurrency.form.component.html
+++ b/ui/src/app/views/project/settings/concurrency/concurrency.form.component.html
@@ -24,45 +24,44 @@
         </nz-col>
     </nz-row>
     <nz-row>
-        <nz-col [nzSpan]="10">
-            <nz-row>
-                <nz-col [nzSpan]="10">
-                    <nz-form-item>
-                        <nz-form-label>Order</nz-form-label>
-                        <nz-form-control>
-                            <nz-select [(ngModel)]="concurrency.order" name="order">
-                                <nz-option *ngFor="let o of orders" [nzLabel]="o" [nzValue]="o"></nz-option>
-                            </nz-select>
-                            <nz-alert *ngIf="errorOrder" nzType="warning" nzMessage="Order must be equal to oldest_first or newest_first"></nz-alert>
-                        </nz-form-control>
-                    </nz-form-item>
-                </nz-col>
-                <nz-col [nzSpan]="10" [nzOffset]="4">
-                    <nz-form-item>
-                        <nz-form-label [nzSpan]="6">Pool</nz-form-label>
-                        <nz-form-control>
-                            <input nz-input type="number" name="pool" id="pool" [(ngModel)]="concurrency.pool">
-                            <nz-alert *ngIf="errorPool" nzType="warning" nzMessage="Pool must be greater than 0"></nz-alert>
-                        </nz-form-control>
-                    </nz-form-item>
-                </nz-col>
-            </nz-row> 
+        <nz-col [nzSpan]="3">
+            <nz-form-item>
+                <nz-form-label>Order</nz-form-label>
+                <nz-form-control>
+                    <nz-select [(ngModel)]="concurrency.order" name="order">
+                        <nz-option *ngFor="let o of orders" [nzLabel]="o" [nzValue]="o"></nz-option>
+                    </nz-select>
+                    <nz-alert *ngIf="errorOrder" nzType="warning" nzMessage="Order must be equal to oldest_first or newest_first"></nz-alert>
+                </nz-form-control>
+            </nz-form-item>
         </nz-col>
-        <nz-col [nzSpan]="13" [nzOffset]="1">
-            <nz-row>
-                <nz-col [nzSpan]="12">
-                    <nz-form-item>
-                        <nz-form-label>Cancel-in-progress</nz-form-label>
-                        <nz-form-control>
-                            <label nz-checkbox [(ngModel)]="concurrency.cancel_in_progress" name="cancel"></label>
-                        </nz-form-control>
-                    </nz-form-item>
-                </nz-col>
-                <nz-col [nzSpan]="12" class="alignEnd">
-                    <button nz-button nzType="primary" [nzLoading]="loading">Create</button>
-                </nz-col>
-            </nz-row>
-            
+        <nz-col [nzSpan]="3" [nzOffset]="1">
+            <nz-form-item>
+                <nz-form-label [nzSpan]="6">Pool</nz-form-label>
+                <nz-form-control>
+                    <input nz-input type="number" name="pool" id="pool" [(ngModel)]="concurrency.pool">
+                    <nz-alert *ngIf="errorPool" nzType="warning" nzMessage="Pool must be greater than 0"></nz-alert>
+                </nz-form-control>
+            </nz-form-item>
+        </nz-col>
+        <nz-col [nzSpan]="3" [nzOffset]="1">
+            <nz-form-item>
+                <nz-form-label>Cancel-in-progress</nz-form-label>
+                <nz-form-control>
+                    <label nz-checkbox [(ngModel)]="concurrency.cancel_in_progress" name="cancel"></label>
+                </nz-form-control>
+            </nz-form-item>
+        </nz-col>
+        <nz-col [nzSpan]="9">
+            <nz-form-item>
+                <nz-form-label [nzSpan]="6">If</nz-form-label>
+                <nz-form-control>
+                    <input nz-input name="if" id="if" [(ngModel)]="concurrency.if">
+                </nz-form-control>
+            </nz-form-item>
+        </nz-col>
+        <nz-col [nzSpan]="4" class="alignEnd">
+            <button nz-button nzType="primary" [nzLoading]="loading">Create</button>
         </nz-col>
     </nz-row>
 </form>
@@ -89,6 +88,12 @@
         <nz-form-control>
             <input nz-input type="number" name="pool" id="pool" [(ngModel)]="concurrency.pool">
             <nz-alert *ngIf="errorPool" nzType="warning" nzMessage="Pool must be greater than 0"></nz-alert>
+        </nz-form-control>
+    </nz-form-item>
+    <nz-form-item>
+        <nz-form-label [nzSpan]="4">If</nz-form-label>
+        <nz-form-control>
+            <input nz-input name="if" id="if" [(ngModel)]="concurrency.if">
         </nz-form-control>
     </nz-form-item>
     <nz-form-item>
